[package]
name = "ducc-reborn-serde"
version = "0.1.0"
description = "Serde serializer/deserializer implementation for `ducc::Value`"
authors = ["Skyler Lipthay <sl@skylerlipthay.com>", "Marvin Lee Fimmel <kontakt@ekranos.me>"]
repository = "https://github.com/SkylerLipthay/ducc"
license = "MIT"

[dependencies]
serde = "1.0"

[dependencies.ducc-reborn]
version = "0.1"
path = "../ducc-reborn"
