[package]
name = "ducc-reborn-sys"
version = "0.1.2"
description = "Low-level Duktape FFI for the `ducc` crate"
authors = ["Skyler Lipthay <sl@skylerlipthay.com>", "Marvin Lee Fimmel <kontakt@ekranos.me>"]
repository = "https://github.com/Ekranos/ducc-reborn"
license = "MIT"

[features]
# Similar to `DUK_USE_EXEC_TIMEOUT_CHECK`.
use-exec-timeout-check = []

# Allows the compilation of a binary `ffi-gen` that creates bindings from the
# `duktape` folder (see `src/ffi_gen.rs`).
build-ffi-gen = ["bindgen"]

[dependencies]
bindgen = { version = "0.53.1", optional = true }

[build-dependencies]
cc = "1.0"

[[bin]]
name = "ffi-gen"
path = "src/ffi_gen.rs"
required-features = ["build-ffi-gen"]
